--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -19,7 +19,7 @@
     <TR>
       <TD width="670">
         <DIV id="toptitle">
-        <H1>Zhiliang Peng &nbsp;</H1></DIV>
+        <H1>Zhonqin Wang &nbsp;</H1></DIV>
         <H3>Ph.D. candidate</H3>
         <P>Room 330, Academy 2 Building 
         <BR>School of Electronic, Electrical and Communication Engineering
