--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -19,19 +19,13 @@
     <TR>
       <TD width="670">
         <DIV id="toptitle">
-        <H1>Zhonqin Wang &nbsp;</H1></DIV>
-        <H3>Ph.D. candidate</H3>
-        <P>Room 330, Academy 2 Building 
-        <BR>School of Electronic, Electrical and Communication Engineering
-        <BR>University of Chinese Academy of Sciences
-        <BR>Beijing, China, 101408.
-        <BR>
+        <H1>Dr. Zhonqin Wang &nbsp;</H1></DIV>
         <BR> Email:  
-        <A href="mailto:pengzhiliang19@mails.ucas.ac.cn"> pengzhiliang19@mails.ucas.ac.cn</A>; 
+        <A href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
         <BR> Github: 
-        <A href="https://github.com/pengzhiliang">https://github.com/pengzhiliang</A>;
+        <A href="https://github.com/Zhongqin-Wang">https://github.com/Zhongqin-Wang</A>;
         <BR> Google scholar:
-        <A href="https://scholar.google.com/citations?user=-X1tyN0AAAAJ&hl=en">https://scholar.google.com</A>
+        <A href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com</A>
         <BR><BR></P>
       </TD>
       <TD>
