--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -20,6 +20,9 @@
       <TD width="670">
         <DIV id="toptitle">
         <H1>Dr. Zhonqin Wang &nbsp;</H1></DIV>
+        <BR>
+        <BR>
+        <BR>
         <BR> Email:  
         <A href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
         <BR> Github: 
@@ -49,7 +52,7 @@
 
   <P>My research interests include computer vision and deep learning, specifically for representation learning.</P>
 
-  <!-- <H2>News</H2>
+  <H2>Biography</H2>
   <UL>
     <LI>
       Our paper "Learning to Match Anchors for Visual Object Detection" has been accepted by IEEE TPAMI 2021</A>.
