--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -40,11 +40,10 @@
   <DIV id="layout-content" style="margin-top: 25px;">
 
 
-  <H2>Biography</H2>
-  <P> I am a Ph.D. candidate of <A href="https://ucassdl.cn/l">PRISDL</A> in the <A href="http://eece.ucas.ac.cn/index.php/en/">School of Electronic, Electrical and Communication Engineering</A>, 
-    <A href="http://english.ucas.ac.cn/">University of Chinese Academy of Sciences </A>, 
-    advised by <A href="http://people.ucas.ac.cn/~0007279?language=en">Prof. Qixiang Ye</A>. 
-    I got a B.E. degree in Huazhong University of Science and Technology, Wuhan in June 2019.      
+  <H2>RESEARCH INTERESTS</H2>
+  <P> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
+    build commercialized sensing applications for a smart and privacy-protected life. My current research interests 
+    include:
   </P>
 
   <P> Presently, I am an intern at Microsoft Research, working with <A href="http://dong.li/">Dr. Li Dong</A>.
@@ -52,7 +51,7 @@
 
   <P>My research interests include computer vision and deep learning, specifically for representation learning.</P>
 
-  <H2>Biography</H2>
+  <!--<H2>Biography</H2>
   <UL>
     <LI>
       Our paper "Learning to Match Anchors for Visual Object Detection" has been accepted by IEEE TPAMI 2021</A>.
