--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -46,10 +46,12 @@
     include:
   </P>
 
-  <P> Presently, I am an intern at Microsoft Research, working with <A href="http://dong.li/">Dr. Li Dong</A>.
-  </P>
-
-  <P>My research interests include computer vision and deep learning, specifically for representation learning.</P>
+  <ul>
+    <li>Wireless Sensing and Communication</li>
+    <li>Contactless Healthcare and Eldercare</li>
+    <li>Radio-Visual Joint Learning and Sensing</li>
+    <li>Contactless Healthcare and Eldercare</li>
+  </ul>
 
   <!--<H2>Biography</H2>
   <UL>
