--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -25,6 +25,8 @@
         <BR>
         <BR> Email:  
         <A href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
+        <BR> Phone: 
+        <A href="+61 0416167758"> +61 0416167758</A>;
         <BR> Github: 
         <A href="https://github.com/Zhongqin-Wang">https://github.com/Zhongqin-Wang</A>;
         <BR> Google scholar:
@@ -53,7 +55,7 @@
     <li>Contactless Healthcare and Eldercare</li>
   </ul>
 
-  <!--<H2>Biography</H2>
+  <H2>WORK EXPERIENCE</H2>
   <UL>
     <LI>
       Our paper "Learning to Match Anchors for Visual Object Detection" has been accepted by IEEE TPAMI 2021</A>.
@@ -61,7 +63,7 @@
     <LI>
       New version of FreeAnchor code is released <A href="https://github.com/zhangxiaosong18/FreeAnchor">[here]</A>.
     </LI>
-  </UL> -->
+  </UL>
 
   <H2>Publications</H2>
     <table class="pub_table">
