--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -14,6 +14,10 @@
 
 <BODY> 
   <DIV id="layout-content" style="margin-top: 25px;">
+   <style>
+    .normal-line-height {line-height: 1.5;}
+    .large-line-height {line-height: 2;}
+  </style>
   <TABLE>
     <TBODY>
     <TR>
@@ -43,7 +47,7 @@
 
 
   <H2>RESEARCH INTERESTS</H2>
-  <P> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
+  <P class="normal-line-height"> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
     build commercialized sensing applications for a smart and privacy-protected life. My current research interests 
     include:
   </P>
