--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -28,13 +28,13 @@
         <BR>
         <BR>
         <BR> Email:  
-        <A href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
+        <A class="normal-line-height" href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
         <BR> Phone: 
-        <A href="+61 0416167758"> +61 0416167758</A>;
+        <A class="normal-line-height" href="+61 0416167758"> +61 0416167758</A>;
         <BR> Github: 
-        <A href="https://github.com/Zhongqin-Wang">https://github.com/Zhongqin-Wang</A>;
+        <A class="normal-line-height" href="https://github.com/Zhongqin-Wang">https://github.com/Zhongqin-Wang</A>;
         <BR> Google scholar:
-        <A href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com</A>
+        <A class="normal-line-height" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com</A>
         <BR><BR></P>
       </TD>
       <TD>
