--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -78,9 +78,8 @@
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Feb. 2024 - Present</div>
-</div>
-  <P class="normal-line-height"> <b>University of Technology Sydney, Australia</b>
-  </P>
+  </div>
+  <p><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
 
   <H2>Publications</H2>
     <table class="pub_table">
