--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -80,7 +80,10 @@
     <div class="right">Feb. 2024 - Present</div>
   </div>
   <p><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
-
+  <ul>
+    <li>Researching</li>
+    <li>Master/PhD student supervision</li>
+  </ul>
   <H2>Publications</H2>
     <table class="pub_table">
     <!-- <tbody> -->
