--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -68,10 +68,10 @@
   </P>
 
   <ul>
-    <li>Wireless Sensing and Communication</li>
-    <li>Contactless Healthcare and Eldercare</li>
-    <li>Radio-Visual Joint Learning and Sensing</li>
-    <li>Contactless Healthcare and Eldercare</li>
+    <li class="normal-line-height">Wireless Sensing and Communication</li>
+    <li class="normal-line-height">Contactless Healthcare and Eldercare</li>
+    <li class="normal-line-height">Radio-Visual Joint Learning and Sensing</li>
+    <li class="normal-line-height">Contactless Healthcare and Eldercare</li>
   </ul>
 
   <H2>WORK EXPERIENCE</H2>
