--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -76,11 +76,11 @@
   </ul>
 
   <H2>WORK EXPERIENCE</H2>
-  <div class="container">
+  <div class="container" class="normal-line-height">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Feb. 2024 - Present</div>
   </div>
-  <p><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
+  <p class="normal-line-height"><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
   <ul>
     <li>Researching</li>
     <li>Master/PhD student supervision</li>
