--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -82,8 +82,8 @@
   </div>
   <p class="normal-line-height"><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
   <ul>
-    <li>Researching</li>
-    <li>Master/PhD student supervision</li>
+    <li class="little-line-height">Researching</li>
+    <li class="little-line-height">Master/PhD student supervision</li>
   </ul>
   <H2>Publications</H2>
     <table class="pub_table">
