--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -76,7 +76,7 @@
   </ul>
 
   <H2>WORK EXPERIENCE</H2>
-  <div class="container" class="normal-line-height">
+  <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Feb. 2024 - Present</div>
   </div>
