--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -85,6 +85,58 @@
     <li class="little-line-height">Researching</li>
     <li class="little-line-height">Master/PhD student supervision</li>
   </ul>
+
+  <div class="container">
+    <div class="left"><b>Capital Normal University, Beijing, China</b></div>
+    <div class="right">Dec. 2021 - Jan. 2024</div>
+  </div>
+  <p class="normal-line-height"><i>Lecturer at College of Information and Engineering</i></p>
+  <ul>
+    <li class="little-line-height">Researching</li>
+    <li class="little-line-height">Teaching</li>
+    <li class="little-line-height">Master student supervision</li>
+  </ul>
+
+  <div class="container">
+    <div class="left"><b>University of Technology Sydney, Australia</b></div>
+    <div class="right">Sep. 2021 - Jun. 2022</div>
+  </div>
+  <p class="normal-line-height"><i>Research Associate supervised by Prof. Min Xu</i></p>
+  <ul>
+    <li class="little-line-height">Developed an elderly healthcare system using commercial 
+      off-the-shelf millimeter-wave devices</li>
+    <li class="little-line-height">Led the development of key functionalities, including 
+      moving object tracking, vital signs estimation, fall detection, stationary object 
+      localization, and people counting</li>
+    <li class="little-line-height">Designed low-computational cutting-edge algorithms 
+      to enhance the real-time performance of the system</li>
+    <li class="little-line-height">Provided valuable mentorship and guidance to Ph.D. 
+      students</li>
+  </ul>
+
+  <div class="container">
+    <div class="left"><b>University of Technology Sydney, Australia</b></div>
+    <div class="right">Jan. 2021 – Jun. 2021</div>
+  </div>
+  <p class="normal-line-height"><i>Research Engineer supervised by Prof. Andrew Zhang</i></p>
+  <ul>
+    <li class="little-line-height">Designed a novel device-free WiFi tracking scheme</li>
+    <li class="little-line-height">Implemented a real-time tracking demonstration system
+      (Demo video available at: 
+      <A href="https://youtu.be/oIPGrRmY-uc">https://youtu.be/oIPGrRmY-uc</A>)</li>
+    <li class="little-line-height">Published the research outcome in an A* top journal</li>
+  </ul>
+
+  <div class="container">
+    <div class="left"><b>University of Technology Sydney, Australia</b></div>
+    <div class="right">Jul. 2020 – Dec. 2020</div>
+  </div>
+  <p class="normal-line-height"><i>Research Assistant supervised by Prof. Andrew Zhang</i></p>
+  <ul>
+    <li class="little-line-height">Established a WiFi hardware platform for data collection </li>
+    <li class="little-line-height">Reproduced and evaluated previous research works on 
+      passive human tracking using WiFi signals</li>
+  </ul>
   <H2>Publications</H2>
     <table class="pub_table">
     <!-- <tbody> -->
