--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -106,7 +106,7 @@
   <ul>
     <li class="little-line-height">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
-    <li class="normal-little-line-height">Led the development of key functionalities, including 
+    <li class="normal-line-height">Led the development of key functionalities, including 
       moving object tracking, vital signs estimation, fall detection, stationary object 
       localization, and people counting</li>
     <li class="little-line-height">Designed low-computational cutting-edge algorithms 
