--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -107,7 +107,7 @@
     <li class="little-line-height">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
     <li class="normal-line-height">Led the development of key functionalities, including 
-      moving object tracking, vital signs estimation, fall detection, stationary object 
+      moving object tracking, vital signs estimation, fall detection,<br>stationary object 
       localization, and people counting</li>
     <li class="little-line-height">Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
