--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -138,6 +138,22 @@
     <li class="little-line-height">Reproduced and evaluated previous research works on 
       passive human tracking using WiFi signals</li>
   </ul>
+
+  <H2>EDUCATION</H2>
+  <div class="container">
+    <div class="left"><b>University of Technology Sydney, Australia</b></div>
+    <div class="right">Jan. 2017 – Dec. 2020</div>
+  </div>
+  <p class="normal-line-height">School of Electrical and Data Engineering</p>
+  <p class="normal-line-height"><i>Ph.D. in Engineering supervised by Prof. Min Xu </i></p>
+  <p class="normal-line-height">Thesis: Computer Vision-assisted Battery-free RFID 
+    Systems for Object Recognition, Localization and Orientation</p>
+
+
+
+
+
+
   <H2>Publications</H2>
     <table class="pub_table">
     <!-- <tbody> -->
