--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -107,7 +107,7 @@
     <li class="little-line-height">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
     <li class="normal-line-height">Led the development of key functionalities, including 
-      moving object tracking, vital signs estimation, fall detection,<br>stationary object 
+      moving object tracking, vital signs estimation, fall detection, stationary object 
       localization, and people counting</li>
     <li class="little-line-height">Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
@@ -144,9 +144,9 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jan. 2017 – Dec. 2020</div>
   </div>
-  <p class="normal-line-height">School of Electrical and Data Engineering</p>
-  <p class="normal-line-height"><i>Ph.D. in Engineering supervised by Prof. Min Xu </i></p>
-  <p class="normal-line-height">Thesis: Computer Vision-assisted Battery-free RFID 
+  <p class="little-line-height">School of Electrical and Data Engineering</p>
+  <p class="little-line-height"><i>Ph.D. in Engineering supervised by Prof. Min Xu </i></p>
+  <p class="little-line-height">Thesis: Computer Vision-assisted Battery-free RFID 
     Systems for Object Recognition, Localization and Orientation</p>
 
 
