--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -144,7 +144,7 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jan. 2017 – Dec. 2020</div>
   </div>
-  <p class="little-line-height">School of Electrical and Data Engineering</p>
+  <p class="normal-little-line-height">School of Electrical and Data Engineering</p>
   <p class="little-line-height"><i>Ph.D. in Engineering supervised by Prof. Min Xu </i></p>
   <p class="little-line-height">Thesis: Computer Vision-assisted Battery-free RFID 
     Systems for Object Recognition, Localization and Orientation</p>
