--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -27,6 +27,11 @@
     .line-height-14 {line-height: 1.4;}
     .line-height-15 {line-height: 1.5;}
     .line-height-20 {line-height: 2;}
+    .line-height-long {
+    display: inline-block;
+    width: 100%;
+    line-height: 1.5; /* 单独设置行内元素的行高 */
+  }
   </style>
   <title>一半左对齐一半右对齐</title>
   <style>
@@ -118,7 +123,7 @@
   <ul>
     <li class="line-height-5">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
-    <li class="line-height-15">Led the development of key functionalities, including 
+    <li class="line-height-5 line-height-long">Led the development of key functionalities, including 
       moving object tracking, vital signs estimation, fall detection, stationary object 
       localization, and people counting</li>
     <li class="line-height-5">Designed low-computational cutting-edge algorithms 
