--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -43,6 +43,15 @@
           width: 50%;
       }
   </style>
+  <style>
+    .line-height {
+      line-height: 1.5; /* 统一行高 */
+    }
+    .line-height span {
+      display: block; /* 将行内元素设为块级元素 */
+      line-height: 1.5; /* 单独设置行内元素的行高 */
+    }
+  </style>
 </HEAD>
 
 
@@ -119,8 +128,8 @@
     <li class="line-height-5">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
     <li class="line-height-5">Led the development of key functionalities, including 
-      moving object tracking, vital signs estimation, fall detection,&nbsp;stationary object 
-      localization, and people counting</li>
+      moving object tracking, vital signs estimation, fall detection,
+      <span>stationary object localization, and people counting</span></li>
     <li class="line-height-5">Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
     <li class="line-height-5">Provided valuable mentorship and guidance to Ph.D. 
