--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -43,15 +43,6 @@
           width: 50%;
       }
   </style>
-  <style>
-    .line-height {
-      line-height: 1.5; /* 统一行高 */
-    }
-    .line-height span {
-      display: block; /* 将行内元素设为块级元素 */
-      line-height: 1.5; /* 单独设置行内元素的行高 */
-    }
-  </style>
 </HEAD>
 
 
@@ -127,9 +118,8 @@
   <ul>
     <li class="line-height-5">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
-    <li class="line-height-5">Led the development of key functionalities, including 
-      moving object tracking, vital signs estimation, fall detection,
-      <span>stationary object localization, and people counting</span></li>
+    <li class="line-height-15">Led the development of key functionalities, including 
+      moving object tracking, vital signs estimation, fall detection, stationary object localization, and people counting</li>
     <li class="line-height-5">Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
     <li class="line-height-5">Provided valuable mentorship and guidance to Ph.D. 
@@ -160,19 +150,34 @@
       passive human tracking using WiFi signals</li>
   </ul>
 
+
+
   <H2>EDUCATION</H2>
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jan. 2017 – Dec. 2020</div>
   </div>
   <p class="line-height-15">School of Electrical and Data Engineering</p>
-  <p class="line-height-1"><i>Ph.D. in Engineering supervised by Prof. Min Xu </i></p>
+  <p class="line-height-1"><i>Ph.D. in Engineering supervised by Prof. Min Xu</i></p>
   <p class="line-height-8">Thesis: Computer Vision-assisted Battery-free RFID 
     Systems for Object Recognition, Localization and Orientation</p>
 
+  <div class="container">
+    <div class="left"><b>Nanjing University of Posts and Telecommunications, China</b></div>
+    <div class="right">Sep. 2015 – Jun. 2020</div>
+  </div>
+  <p class="line-height-15">School of Internet of Things</p>
+  <p class="line-height-1"><i>Ph.D. in Information Network supervised by Prof. Guoliang Chen</i></p>
+  <p class="line-height-8">Thesis: Research on Object Position Sensing and Multi-Tag Mutual 
+    Coupling Suppression in Battery-free RFID</p>
 
-
-
+  <div class="container">
+    <div class="left"><b>University of Technology Sydney, Australia</b></div>
+    <div class="right">Sep. 2011 – Mar. 2014</div>
+  </div>
+  <p class="line-height-15">Nanjing University of Posts and Telecommunications, China</p>
+  <p class="line-height-1"><i>School of Computer Science and Technology</i></p>
+  <p class="line-height-8">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
 
   <H2>Publications</H2>
