--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -179,6 +179,12 @@
   <p class="line-height-1"><i>School of Computer Science and Technology</i></p>
   <p class="line-height-8">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
+  <H2>PUBLICATIONS</H2>
+  <p>[1] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
+    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
+    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
+
+
 
   <H2>Publications</H2>
     <table class="pub_table">
