--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -159,7 +159,7 @@
   </div>
   <p class="line-height-15">School of Electrical and Data Engineering</p>
   <p class="line-height-1"><i>Ph.D. in Engineering supervised by Prof. Min Xu</i></p>
-  <p class="line-height-10">Thesis: Computer Vision-assisted Battery-free RFID 
+  <p class="line-height-13">Thesis: Computer Vision-assisted Battery-free RFID 
     Systems for Object Recognition, Localization and Orientation</p>
 
   <div class="container">
@@ -168,7 +168,7 @@
   </div>
   <p class="line-height-15">School of Internet of Things</p>
   <p class="line-height-1"><i>Ph.D. in Information Network supervised by Prof. Guoliang Chen</i></p>
-  <p class="line-height-10">Thesis: Research on Object Position Sensing and Multi-Tag Mutual 
+  <p class="line-height-13">Thesis: Research on Object Position Sensing and Multi-Tag Mutual 
     Coupling Suppression in Battery-free RFID</p>
 
   <div class="container">
@@ -177,10 +177,25 @@
   </div>
   <p class="line-height-15">Nanjing University of Posts and Telecommunications, China</p>
   <p class="line-height-1"><i>School of Computer Science and Technology</i></p>
-  <p class="line-height-10">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
+  <p class="line-height-13">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
   <H2>PUBLICATIONS</H2>
   <p>[1] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
+    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
+    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
+  <p>[2] Kuangda Chen, J. Andrew Zhang, <b>Zhongqin Wang</b> and Y. Jay Guo. Development 
+    of an Uplink Sensing Demonstrator for Perceptive Mobile Networks. <i>In Proc. of IEEE 
+    ISCIT</i>, pp. 191-196, 2023.</p>
+  <p>[3] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
+    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
+    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
+  <p>[4] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
+    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
+    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
+  <p>[5] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
+    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
+    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
+  <p>[6] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
     Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
     no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
 
