--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -157,7 +157,7 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jan. 2017 – Dec. 2020</div>
   </div>
-  <p class="line-height-15">School of Electrical and Data Engineering</p>
+  <p class="line-height-17">School of Electrical and Data Engineering</p>
   <p class="line-height-1"><i>Ph.D. in Engineering supervised by Prof. Min Xu</i></p>
   <p class="line-height-13">Thesis: Computer Vision-assisted Battery-free RFID 
     Systems for Object Recognition, Localization and Orientation</p>
@@ -166,7 +166,7 @@
     <div class="left"><b>Nanjing University of Posts and Telecommunications, China</b></div>
     <div class="right">Sep. 2015 – Jun. 2020</div>
   </div>
-  <p class="line-height-15">School of Internet of Things</p>
+  <p class="line-height-17">School of Internet of Things</p>
   <p class="line-height-1"><i>Ph.D. in Information Network supervised by Prof. Guoliang Chen</i></p>
   <p class="line-height-13">Thesis: Research on Object Position Sensing and Multi-Tag Mutual 
     Coupling Suppression in Battery-free RFID</p>
@@ -175,7 +175,7 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Sep. 2011 – Mar. 2014</div>
   </div>
-  <p class="line-height-15">Nanjing University of Posts and Telecommunications, China</p>
+  <p class="line-height-17">Nanjing University of Posts and Telecommunications, China</p>
   <p class="line-height-1"><i>School of Computer Science and Technology</i></p>
   <p class="line-height-13">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
@@ -186,18 +186,41 @@
   <p>[2] Kuangda Chen, J. Andrew Zhang, <b>Zhongqin Wang</b> and Y. Jay Guo. Development 
     of an Uplink Sensing Demonstrator for Perceptive Mobile Networks. <i>In Proc. of IEEE 
     ISCIT</i>, pp. 191-196, 2023.</p>
-  <p>[3] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
-    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
-    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
-  <p>[4] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
-    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
-    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
-  <p>[5] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
-    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
-    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
-  <p>[6] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
-    Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
-    no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
+  <p>[3] Yingqi Wang, <b>Zhongqin Wang</b>, J. Andrew Zhang, Haimin Zhang, Min Xu. 
+    Vital Sign Monitoring in Dynamic Environment via mmWave Radar and Camera Fusion, 
+    <i>IEEE Transactions on Mobile Computing</i>, pp. 1-17, 2023, doi:10.1109/
+    TMC.2023.3288850.</p>
+  <p>[4] <b>Zhongqin Wang</b>, J. Andrew Zhang, Fu Xiao, Min Xu. Accurate AoA 
+    Estimation for RFID Tag Array with Mutual Coupling, <i>IEEE Internet of Things Journal</i>
+    , vol. 9, no. 15, pp. 12954-12972, 2022. <i>(JCR Q1, IF: 10.238)</i></p>
+  <p>[5] <b>Zhongqin Wang</b>, Min Xu, Ning Ye, Ruchuan Wang, Haiping Huang and Fu Xiao. 
+    Computer Vision-assisted 3D Object Localization via COTS RFID Devices and a Monocular 
+    Camera, <i>IEEE Transactions on Mobile Computing</i>, vol. 20, no. 3, pp. 893 - 908, 
+    2021. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
+  <p>[6] <b>Zhongqin Wang</b>, Min Xu, Fu Xiao. Recognizing 3D Orientation of a Two-RFID-Tag
+     Labeled Object in Multipath Environments Using Deep Transfer Learning. 
+     <i>In Proc. of IEEE ICDCS</i>, pp. 652-662, 2021. <i>(CORE A, 97/489)</i></p>
+  <p>[7] <b>Zhongqin Wang</b>, Min Xu, Ning Ye, Ruchuan Wang, Haiping Huang and Fu Xiao.
+     RF-Mirror: Mitigating Mutual Coupling Interference in Two-Tag Array Labeled RFID 
+     Systems. <i>In Proc. of IEEE SECON</i>, pp. 1-9, 2020. <i>(CORE B, 36/129)</i></p>
+  <p>[8] <b>Zhongqin Wang</b>, Min Xu, Ning Ye, Ruchuan Wang and Haiping Huang. RF-Focus:
+     Computer Vision-assisted Region-of-interest RFID Tag Recognition and Localization in
+      Multipath-prevalent Environments. <i>Proceedings of the ACM on Interactive, Mobile, 
+        Wearable and Ubiquitous Technologies</i>, vol.3, no. 1, pp. 29, 2019. 
+         <i>(UbiComp, CORE A*)</i></p>
+  <p>[9] <b>Zhongqin Wang</b>, Min Xu, Ning Ye, Ruchuan Wang and Haiping Huang. RF-MVO: 
+    Simultaneous 3D Object Localization and Camera Trajectory Recovery Using RFID Devices
+     and a 2D Monocular Camera. <i>In Proc. of IEEE ICDCS</i>, pp. 534-544, 2018. 
+     <i>(CORE A, 78/378)</i></p>
+  <p>[10] <b>Zhongqin Wang</b>, Fu Xiao, Ning Ye, Ruchuan Wang and Panlong Yang. 
+    A See-Through-wall System for Device-free Human Motion Sensing Based on Battery-free 
+    RFID, <i>ACM Transactions on Embedded Computing Systems</i>, vol. 17, no. 1, pp. 
+    1-21, 2017. <i>(CORE B, JCR Q3, IF: 1.886)</i></p>
+  <p>[11] Fu Xiao, <b>Zhongqin Wang</b>, Ning Ye, Ruchuan Wang and Xiang-Yang Li. One 
+    More Tag Enables Fine-Grained RFID Localization and Tracking, <i>IEEE/ACM Transactions 
+      on Networking</i>, vol. 26, no. 1, pp. 161-174, 2017. <i>(CORE A*, JCR Q1, IF: 3.796)</i></p>
+  <p>[12] <b>Zhongqin Wang</b><i></i><i></i></p>
+  <p>[13] <b>Zhongqin Wang</b><i></i><i></i></p>
 
 
 
