--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -219,8 +219,14 @@
   <p>[11] Fu Xiao, <b>Zhongqin Wang</b>, Ning Ye, Ruchuan Wang and Xiang-Yang Li. One 
     More Tag Enables Fine-Grained RFID Localization and Tracking, <i>IEEE/ACM Transactions 
       on Networking</i>, vol. 26, no. 1, pp. 161-174, 2017. <i>(CORE A*, JCR Q1, IF: 3.796)</i></p>
-  <p>[12] <b>Zhongqin Wang</b><i></i><i></i></p>
-  <p>[13] <b>Zhongqin Wang</b><i></i><i></i></p>
+  <p>[12] <b>Zhongqin Wang</b>, Ning Ye, Reza Malekiand, Fu Xiao and Ruchuan Wang. 
+    TrackT: Accurate Tracking of RFID Tags with mm-level Accuracy Using First-order Taylor 
+    Series Approximation, <i>Ad Hoc Networks</i>, vol. 53, pp. 132-144, 2016. 
+    <i>(JCR Q1, IF: 4.816)</i></p>
+  <p>[13] <b>Zhongqin Wang</b>, Ning Ye, Reza Malekian, Ruchuan Wang and Peng Li.
+     TMicroscope: Behavior Perception Based on the Slightest RFID Tag Motion. 
+     <i>Elektronika ir Elektrotechnika</i>, vol. 22, no. 2, pp.114-122, 2016. 
+     <i>(JCR Q3, IF: 1.059)</i></p>
 
 
 
