--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -228,8 +228,20 @@
      <i>Elektronika ir Elektrotechnika</i>, vol. 22, no. 2, pp.114-122, 2016. 
      <i>(JCR Q3, IF: 1.059)</i></p>
 
+  <H2>PROFESSIONAL SERVICES</H2>
+  <ul>
+    <li class="line-height-5">TPC Member, Workshop on Integrated Sensing and 
+      Communication at IEEE ICC, 2023</li>
+    <li class="line-height-5">Guest Editor, Special Issue "Precise Indoor 
+      Positioning and Navigation" of Applied Sciences, 2022</li>
+    <li class="line-height-5">Reviewer, IEEE Journal of Selected Topics in Signal Processing, 2021</li>
+    <li class="line-height-5">Reviewer, IJCAI-PRICAI, 2020</li>
+    <li class="line-height-5">Reviewer, IEEE Access</li>
+    <li class="line-height-5">Reviewer, IET Communications</li>
+    <li class="line-height-5">Reviewer, Measurements</li>
+  </ul>
 
-
+     
   <H2>Publications</H2>
     <table class="pub_table">
     <!-- <tbody> -->
