--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -241,6 +241,16 @@
     <li class="line-height-5">Reviewer, Measurements</li>
   </ul>
 
+
+  <H2>AWARDS & HONORS</H2>
+  <ul>
+    <li class="line-height-5">Winner, The "Chunhui Cup" Chinese Oversea Students Innovation and Entrepreneurship Competition, 2022</li>
+    <li class="line-height-5">UTS President’s Scholarship, 2017</li>
+    <li class="line-height-5">National Scholarship for Doctoral Students, 2017</li>
+    <li class="line-height-5">First Prize, the 2nd National College “3S” (Smart, Service and System) Competition on Internet of Things Technology and Applications, 2016</li>
+    <li class="line-height-5">National Scholarship for Graduate Students, 2013</li>
+    <li class="line-height-5">National Scholarship for Undergraduate Students, 2009</li>
+  </ul>
      
   <H2>Publications</H2>
     <table class="pub_table">
