--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -260,7 +260,9 @@
       <li class="line-height-5">C#</li>
       <li class="line-height-5">C/C++</li>
       <li class="line-height-5">Linux</li>
-    </ul>
+  </ul>
 
+
+  <img src="./files/demo_1.gif" alt="描述图片">
 </BODY>
 </HTML>
