--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -263,6 +263,6 @@
   </ul>
 
   <H2>DEMO</H2>
-  <img src="./files/demo_1.gif" alt="描述图片">
+  <img src="./files/demo_1.gif" width="300" alt="描述图片">
 </BODY>
 </HTML>
