--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -263,6 +263,13 @@
   </ul>
 
   <H2>DEMO</H2>
-  <img src="./files/demo_1.gif" width="300" alt="描述图片">
+  <tr>
+    <td class="demo_1"><img src="./files/demo_1.gif" class="papericon"></td>
+    <td 
+      class="demo_script_1"><u>Zhiliang Peng</u>, Zonghao Guo, Wei Huang, Yaowei Wang, Lingxi Xie, Jianbin Jiao, Qixiang Ye
+      <br><b>Conformer: Local features coupling global representations for visual recognition and detection</b>
+      <br>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023
+    </td>
+  </tr>
 </BODY>
 </HTML>
