--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -43,6 +43,26 @@
           width: 30%;
       }
   </style>
+  <style>
+    table.pub_table,td.pub_td1,td.pub_td2
+  {
+  padding: 8px;
+  /* width: 860px; */
+      border-collapse: separate;
+      border-spacing: 15px;
+      margin-top: -5px;
+  }
+  td.pub_td1
+  {
+  width:50px;
+  }
+  td.pub_td1 img
+  {
+    /*height:120px;*/
+    width: 200px;
+  }
+  </style>
+  
 </HEAD>
 
 
@@ -263,12 +283,14 @@
   </ul>
 
   <H2>DEMO</H2>
-  <tr>
-    <td class="demo_1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
-    <td class="demo_script_1"><u>Zhiliang Peng</u>, Zonghao Guo, Wei Huang, Yaowei Wang, Lingxi Xie, Jianbin Jiao, Qixiang Ye
-      <br><b>Conformer: Local features coupling global representations for visual recognition and detection</b>
-      <br>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023
-    </td>
-  </tr>
+  <table class="pub_table">
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Conformer: Local features coupling global representations for visual recognition and detection</b>
+        <br>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023
+      </td>
+    </tr>
+  </table>
 </BODY>
 </HTML>
