--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -289,6 +289,8 @@
       <td class="pub_td2">
         <b>Conformer: Local features coupling global representations for visual recognition and detection</b>
         <br>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023
+        <BR> Full demo: 
+          <A class="line-height-15" href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;
       </td>
     </tr>
   </table>
