--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -287,8 +287,12 @@
     <tr>
       <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>Conformer: Local features coupling global representations for visual recognition and detection</b>
-        <br>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023
+        <b>Head Pose Estimation via mmWave Radar</b>
+        <br>In this study, we introduce mmHead, a novel human head 
+        posture estimation system using mmWave radar technology. In
+        the initial phase, we utilized FFT and static interference removal
+        techniques to extract head pose features, aiming to mitigate
+        environmental noise and user variations. 
         <BR> Full demo: 
           <A class="line-height-15" href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;
       </td>
