--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -293,8 +293,9 @@
         the initial phase, we utilized FFT and static interference removal
         techniques to extract head pose features, aiming to mitigate
         environmental noise and user variations. 
-        <BR> Full demo: 
-          <A class="line-height-15" href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;
+        <ul>
+          <li class="line-height-5">Full demo:<A class="line-height-15" href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+        </ul>
       </td>
     </tr>
   </table>
