--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -296,7 +296,7 @@
         environmental noise and user variations. 
         <br>
         <ul>
-          <li class="line-height-5">Full demo:<A class="line-height-5" href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
         </ul>
       </td>
     </tr>
