--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -200,6 +200,25 @@
   <p class="line-height-13">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
   <H2>PUBLICATIONS</H2>
+  <table class="pub_table">
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Single-Target Real-Time Passive WiFi Tracking</b>
+        <br>
+        <br>s. In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
+         which can achieve single-target real-time passive tracking using channel state 
+         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
+         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+
+  </table>
   <p>[1] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
     Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
     no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
